fix z-index on modal so that it stays above mobile hamburger menu v2

--- a/css/styles.css
+++ b/css/styles.css
@@ -152,7 +152,7 @@ main { font-size: 130%; font-weight: bolder; color: black; padding-top: 0.5vw; p
   .topnav.responsive .icon { position: absolute; right: 0; top: 0; }
   .topnav.responsive a { float: none; display: block; text-align: left; }
   .header-logo img { width: 150px; margin-top: 10px; margin-right: 24px; }
-  .main-navbar { background-color: white; position: absolute; right: 30px; top: 20px; z-index: 10; border: black 0.5px solid; border-radius: 10px; } }
+  .main-navbar { background-color: white; position: absolute; right: 30px; top: 20px; z-index: 1; border: black 0.5px solid; border-radius: 10px; } }
 
 .hero-section { border-radius: 10px; display: grid; grid-template-columns: repeat(12, 1fr); overflow: hidden; box-shadow: 0 2px 7px 2px rgba(0, 0, 0, 0.2); margin-bottom: 10px; }
 
@@ -199,7 +199,7 @@ footer { padding-left: 2vw; padding-right: 2vw; margin: 0 20px; }
 
 .smFont { font-size: 16px; }
 
-.bground { display: none; position: fixed; z-index: 1; left: 0; top: 0; height: 100%; width: 100%; overflow: auto; background-color: rgba(26, 39, 156, 0.4); }
+.bground { display: none; position: fixed; z-index: 2; left: 0; top: 0; height: 100%; width: 100%; overflow: auto; background-color: rgba(26, 39, 156, 0.4); }
 
 .content { margin: 5% auto; width: 100%; max-width: 500px; animation-name: modalopen; animation-duration: 1s; background: #232323; border-radius: 10px; overflow: hidden; position: relative; color: #fff; padding-top: 10px; }
 
