--- a/sass/05_layout/_topnav.scss
+++ b/sass/05_layout/_topnav.scss
@@ -98,7 +98,7 @@
     position: absolute;
     right: 30px;
     top: 20px;
-    z-index: 10;
+    z-index: 1;
     border: black 0.5px solid;
     border-radius: 10px;
   }
